# train

./: .env  Cargo.toml  Earthfile  LICENSE  README.md
admin/: Cargo.toml
admin/src/: main.rs
api/: Cargo.toml  Earthfile
api/src/: main.rs
asset/: sample-artifact-request-invalid.json  sample-artifact-request.json
deployment/: tekton_in_kind.sh  train-api.yml  train-reconciller.yml  train-redis.yml  train-scheduler.yml
reconciller/: Cargo.toml  Earthfile
reconciller/src/: main.rs
scheduler/: Cargo.toml  Earthfile
scheduler/src/: main.rs
shared/: Cargo.toml  Earthfile  diesel.toml
shared/migrations/2024-02-05-012816_create_artifact/: down.sql  up.sql
shared/src/: artifact.rs  bo.rs  command.rs  dao.rs  error.rs  lib.rs  queue.rs  scheduler.rs
shared/src/artifact/: artifact_dao.rs  dao.rs  instance.rs  instance_dao.rs  manifest.rs  naming.rs  pipeline.rs
shared/src/artifact/dao/: artifact_dao.rs  instance_dao.rs
shared/src/bo/: artifact.rs  dao.rs  manifest.rs  pipeline.rs
shared/src/bo/dao/: account_dao.rs  artifact_dao.rs  instance_dao.rs  model.rs  schema.rs  secret_dao.rs  team_dao.rs
shared/tekton/: 200-serviceaccount.yaml  create_kind_cluster.sh  create_secret.sh  install.sh  train-template.yaml
shared/tekton/auth/: htpasswd
src/: artifact.rs  error.rs  main.rs  resource.rs
src/artifact/: pipeline.rs
tekton/: create_password.sh  opsman.yaml  set_cluster_registry.sh  start_registry.sh  test.sh  train.yaml
