[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0.14.17", features = ["full"]}
tokio = {version = "1.17.0", features = ["full"] }
log = "0.4.16"
env_logger = "0.9.0"
futures = "0.3.21"

serde = {version="1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
serde_json = "1.0.107"

train_lib = { path = "../shared" }
