[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-web-httpauth = "0.8.1"
log = "0.4.16"
env_logger = "0.9.0"
futures = "0.3.21"

serde = {version="1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
serde_json = "1.0.107"

train_lib = { path = "../shared" }
diesel = "2.1.4"
dotenvy = "0.15.7"
awc = "3.4.0"
