[package]
name = "reconciller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
train_lib = { path = "../shared" }
redis = "0.23.3"
log = "0.4.16"
env_logger = "0.9.0"

[dev-dependencies]
serde = {version="1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
serde_json = "1.0.107"
