[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
train_lib = { path = "../shared" }
log = "0.4.16"
env_logger = "0.9.0"
redis = "0.23.3"

actix-web = "4"
actix-files = "0.6"
actix-web-httpauth = "0.8.1"
actix-rt = "2.9.0"

[dev-dependencies]
serde = {version="1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
serde_json = "1.0.107"
chrono = "0.4.31"
