[package]
name = "train_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.188", features = ["derive"]}
serde_yaml = "0.9.25"
serde_json = "1.0.107"
redis = "0.23.3"
chrono = "0.4.31"
rand = "0.8.5"
log = "0.4.16"
env_logger = "0.9.0"
diesel = {version="2.1.4", features=["postgres", "r2d2", "chrono", "serde_json"]}
dotenvy = "0.15.7"
actix-web = "4.5.1"
http = "1.0.0"
actix-http = "3.6.0"
